# remembr

./: .env.example  .gitattributes  .gitignore  404.html  CHANGELOG.md  CODEOWNERS  DEPLOYMENT.md  QUICKSTART.md  README.md  RELEASING.md  TESTING.md  docker-compose.test.yml  docker-compose.yml  docs-requirements.txt  index.html  mkdocs.yml  sitemap.xml
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml  docs.yml  release.yml
404/: index.html
_includes/auth-python/: index.html
_includes/install-autogen/: index.html
_includes/install-crewai/: index.html
_includes/install-haystack/: index.html
_includes/install-langchain/: index.html
_includes/install-langgraph/: index.html
_includes/install-llamaindex/: index.html
_includes/install-openai-agents/: index.html
_includes/install-pydantic-ai/: index.html
_includes/install-python-sdk/: index.html
adapters/: README.md
adapters/autogen/: README.md  pyproject.toml  remembr_autogen_memory.py
adapters/base/: remembr_adapter_base.py
adapters/crewai/: README.md  pyproject.toml  remembr_crew_memory.py
adapters/haystack/: README.md  pyproject.toml  remembr_haystack_memory.py
adapters/haystack/tests/: test_remembr_haystack_memory.py
adapters/langchain/: README.md  pyproject.toml  remembr_memory.py
adapters/pydantic_ai/: README.md  pyproject.toml  remembr_pydantic_memory.py
adapters/pydantic_ai/tests/: test_remembr_pydantic_memory.py
admin-ui/: index.html
api-reference/: index.html
cli/: index.html
contributing/: index.html
docs/: 404.md  CNAME  admin-ui.md  api-reference.md  cli.md  contributing.md  index.md  observability.md  quickstart.md  security.md  self-hosted.md
examples/: README.md
examples/langgraph-multi-agent/: .env.example  README.md  docker-compose.yml  pyproject.toml
examples/langgraph-multi-agent/src/: __init__.py  graph.py  memory.py  run.py  topics.py
examples/langgraph-multi-agent/src/agents/: __init__.py  research.py  review.py  writing.py
examples/langgraph-multi-agent/tests/: conftest.py  test_graph.py
observability/: index.html
overrides/: main.html
roadmap/: index.html
scripts/: check-docs.sh  check_docs_codeblocks.py  docker-init.sh  smoke-test.ps1  smoke-test.sh
sdk/python/: README.md  pyproject.toml  pytest.ini
sdk/python/examples/: async_memory_workflow.py
sdk/python/remembr/: __init__.py  client.py  models.py
sdk/python/remembr/cli/: __init__.py  config.py  main.py  output.py
sdk/python/tests/: conftest.py  test_memory.py
sdk/python/tests/cli/: conftest.py  test_config.py  test_export.py  test_health.py  test_search.py  test_sessions.py  test_store.py
search/: search_index.json
security/: index.html
self-hosted/: index.html
server/: Dockerfile  EMBEDDINGS.md  QUICKSTART.md  README.md  pyproject.toml  pytest.ini  requirements-embeddings.txt  requirements.txt
site/: 404.html  index.html  sitemap.xml
website/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
(+246 files in other folders)
