[project]
name = "remembr-haystack-adapter"
version = "0.2.0"
description = "Haystack adapter for Remembr memory components"
requires-python = ">=3.11"
dependencies = [
  "remembr>=0.2.0",
  "haystack-ai>=2.0.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
