[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "remembr"
version = "0.2.0"
description = "Persistent memory infrastructure for AI agents"
readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "Emmanuel Nwanguma", email = "nwangumaemmanuel29@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
keywords = ["ai", "memory", "agents", "llm", "langchain", "langgraph", "crewai", "autogen", "llamaindex", "embeddings", "vector-search"]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
    "tenacity>=8.2.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/ai-emart/remembr"
Repository = "https://github.com/ai-emart/remembr"
Documentation = "https://github.com/ai-emart/remembr#readme"
"Bug Tracker" = "https://github.com/ai-emart/remembr/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "respx>=0.21.0",
    "ruff>=0.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[project.scripts]
remembr = "remembr.cli.main:app"

[tool.setuptools.packages.find]
include = ["remembr*"]

[tool.pytest.ini_options]
markers = ["integration: marks tests as integration tests"]
